<resources>
    <string name="app_name">Material Test</string>

    <!-- Button text -->
    <string name="app_bar_bottom">Bar Bottom</string>
    <string name="app_bar_top">Bar Top</string>
    <string name="bottom_navigation">Navigation</string>
    <string name="floating_button">FAB</string>
    <string name="cards">Cards</string>
    <string name="chips">Chips</string>
    <string name="dialogs">Dialogs</string>
    <string name="menus">Menus</string>
    <string name="navigation_drawer">Drawer</string>
    <string name="pickers">Pickers</string>
    <string name="checkboxes">Checkboxes</string>
    <string name="radios">Radios</string>
    <string name="switches">Control Switches</string>
    <string name="sheets_bottom">Sheets Bottom</string>
    <string name="sheets_side">Sheets Sides</string>
    <string name="spinner">Spinner</string>
    <string name="snackbars">Snackbars</string>
    <string name="tabs">Tabs</string>
    <string name="text_fields">Text Fields</string>

    <!-- Menus text -->
    <string name="search">Search</string>
    <string name="add_art">Add Art</string>
    <string name="add_movie">Add Movie</string>
    <string name="favorite">Favoritos</string>
    <string name="more">Otros</string>
    <string name="about">Nosotros</string>
    <string name="products">Productos</string>
    <string name="stores">Tiendas</string>
    <string name="offers">Ofertas</string>

    <string name="ojala">
        Ojalá que las hojas no te toquen el cuerpo cuando caigan
        Para que no las puedas convertir en cristal
        Ojalá que la lluvia deje de ser milagro que baja por tu cuerpo
        Ojalá que la luna pueda salir sin ti
        Ojalá que la tierra no te bese los pasos
        \n
        \n
        Ojalá se te acabe la mirada constante
        La palabra precisa la sonrisa perfecta
        Ojalá pase algo que te borre de pronto
        Una luz cegadora, un disparo de nieve
        Ojalá por lo menos que me lleve la muerte
        Para no verte tanto, para no verte siempre
        En todos los segundos, en todas las visiones
        Ojalá que no pueda tocarte ni en canciones
        \n
        \n
        Ojalá que la aurora no de gritos que caigan en mi espalda
        Ojalá que tu nombre se le olvide esa voz
        Ojalá las paredes no retengan tu ruido de camino cansado
        Ojalá que el deseo se vaya tras de ti
        A tu viejo gobierno de difuntos y flores
        \n
        \n
        Ojalá se te acabe la mirada constante
        La palabra precisa la sonrisa perfecta
        Ojalá pase algo que te borre de pronto
        Una luz cegadora, un disparo de nieve
        Ojalá por lo menos que me lleve la muerte
        Para no verte tanto, para no verte siempre
        En todos los segundos, en todas las visiones
        Ojalá que no pueda tocarte ni en canciones
        Ojalá pase algo que te borre de pronto
        Una luz cegadora, un disparo de nieve
        Ojalá por lo menos que me lleve la muerte
        Para no verte tanto, para no verte siempre
        En todos los segundos, en todas las visiones
        Ojalá que no pueda tocarte ni en canciones
        \n
        \n
        Ojalá que las hojas no te toquen el cuerpo cuando caigan
        Para que no las puedas convertir en cristal
        Ojalá que la lluvia deje de ser milagro que baja por tu cuerpo
        Ojalá que la luna pueda salir sin ti
        Ojalá que la tierra no te bese los pasos
        \n
        \n
        Ojalá se te acabe la mirada constante
        La palabra precisa la sonrisa perfecta
        Ojalá pase algo que te borre de pronto
        Una luz cegadora, un disparo de nieve
        Ojalá por lo menos que me lleve la muerte
        Para no verte tanto, para no verte siempre
        En todos los segundos, en todas las visiones
        Ojalá que no pueda tocarte ni en canciones
        \n
        \n
        Ojalá que la aurora no de gritos que caigan en mi espalda
        Ojalá que tu nombre se le olvide esa voz
        Ojalá las paredes no retengan tu ruido de camino cansado
        Ojalá que el deseo se vaya tras de ti
        A tu viejo gobierno de difuntos y flores
        \n
        \n
        Ojalá se te acabe la mirada constante
        La palabra precisa la sonrisa perfecta
        Ojalá pase algo que te borre de pronto
        Una luz cegadora, un disparo de nieve
        Ojalá por lo menos que me lleve la muerte
        Para no verte tanto, para no verte siempre
        En todos los segundos, en todas las visiones
        Ojalá que no pueda tocarte ni en canciones
        Ojalá pase algo que te borre de pronto
        Una luz cegadora, un disparo de nieve
        Ojalá por lo menos que me lleve la muerte
        Para no verte tanto, para no verte siempre
        En todos los segundos, en todas las visiones
        Ojalá que no pueda tocarte ni en canciones
        \n
        \n
        Ojalá que las hojas no te toquen el cuerpo cuando caigan
        Para que no las puedas convertir en cristal
        Ojalá que la lluvia deje de ser milagro que baja por tu cuerpo
        Ojalá que la luna pueda salir sin ti
        Ojalá que la tierra no te bese los pasos
        \n
        \n
        Ojalá se te acabe la mirada constante
        La palabra precisa la sonrisa perfecta
        Ojalá pase algo que te borre de pronto
        Una luz cegadora, un disparo de nieve
        Ojalá por lo menos que me lleve la muerte
        Para no verte tanto, para no verte siempre
        En todos los segundos, en todas las visiones
        Ojalá que no pueda tocarte ni en canciones
        \n
        \n
        Ojalá que la aurora no de gritos que caigan en mi espalda
        Ojalá que tu nombre se le olvide esa voz
        Ojalá las paredes no retengan tu ruido de camino cansado
        Ojalá que el deseo se vaya tras de ti
        A tu viejo gobierno de difuntos y flores
        \n
        \n
        Ojalá se te acabe la mirada constante
        La palabra precisa la sonrisa perfecta
        Ojalá pase algo que te borre de pronto
        Una luz cegadora, un disparo de nieve
        Ojalá por lo menos que me lleve la muerte
        Para no verte tanto, para no verte siempre
        En todos los segundos, en todas las visiones
        Ojalá que no pueda tocarte ni en canciones
        Ojalá pase algo que te borre de pronto
        Una luz cegadora, un disparo de nieve
        Ojalá por lo menos que me lleve la muerte
        Para no verte tanto, para no verte siempre
        En todos los segundos, en todas las visiones
        Ojalá que no pueda tocarte ni en canciones
    </string>

    <string name="page_title">Hurtado Store</string>
    <string name="mail">Mail</string>
    <string name="copy">Copiar</string>
    <string name="earring">Aretes Tipo Orquidea</string>
    <string name="earring_description">Arete artesanal</string>
    <string name="earring_long">Arete artesanal hecho a mano con oro encontrado en las exóticas minas de Sámana</string>
    <string name="action_1">Accion 1</string>
    <string name="action_2">Accion 2</string>
    <string name="click">Cliqueado</string>
    <string name="phrase">Frase</string>
    <string name="process">Procesar</string>
    <string name="pop_up">Pop up Dialogs</string>
    <string name="ayuda">Ayuda</string>
    <string name="title_menu">Diego Stuff </string>
    <string name="comidas">Comidas</string>
    <string name="shopping">Compras</string>
    <string name="contact_us">Contactanos</string>
    <string name="open_nav">Abrir Navegacion</string>
    <string name="close_nav">Cerrar Navegacion</string>
    <string name="user_compny">Massiel Hurtado</string>
    <string name="position_company">Adminitradora de bebes</string>
    <string name="form">Formulario</string>
    <string name="browser">Navegador</string>
    <string name="orders">Pedidos</string>
    <string name="invoice">Facturas</string>
    <string name="shopping_car">Carrito</string>
    <string name="shopping_list">Listas</string>
    <string name="show_date_picker">Muestra el calendario</string>
    <string name="select_date">Selecione una Fecha</string>
    <string name="select_product">Selecione su producto favoritos</string>
    <string name="shoes">Zapatos</string>
    <string name="purse">Carteras</string>
    <string name="earring_solo">Aretes</string>
    <string name="write_result">Escribe resultado</string>
    <string name="pick_flavor">Selecione su sabor preferido</string>
    <string name="chocolate">Chocolate</string>
    <string name="vanilla">Vainilla</string>
    <string name="strawberry">Fresa</string>
    <string name="cocoa">Cacao</string>
    <string name="setting">Configuración</string>
    <string name="wifi">Wi-fi</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="do_not_disturb">No interrumpir</string>
    <string name="share">Compartir</string>
    <string name="upload">Subir a Drive</string>
    <string name="save_to_device">Salvar en el dispositivo</string>
    <string name="show_snackbar">Mostrar snackbar</string>
    <string name="explore">Explorar</string>
    <string name="flight">Vuelos</string>
    <string name="trips">Viajes</string>

    <string name="sample_data">Sample Data</string>
</resources>
