<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item android:title="@string/shopping">
        <menu>

            <item
                android:title="@string/orders"
                android:icon="@drawable/ic_receipt_black_24dp"
                />
            <item
                android:title="@string/invoice"
                android:icon="@drawable/ic_attach_money_white_24dp"
                />
            <item
                android:title="@string/shopping_car"
                android:icon="@drawable/ic_shopping_cart_black_24dp"
                />
            <item
                android:title="@string/shopping_list"
                android:icon="@drawable/ic_list_black_24dp"
                />
        </menu>
    </item>

    <item android:title="@string/contact_us">

        <menu>

            <item
                android:title="@string/form"
                android:icon="@drawable/ic_input_black_24dp"
                />
            <item
                android:title="@string/mail"
                android:icon="@drawable/ic_mail_outline_black_24dp"
                />
            <item
                android:title="@string/browser"
                android:icon="@drawable/ic_open_in_browser_black_24dp"
                />
        </menu>
    </item>
</menu>