<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/app_bar_favotite"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/favorite"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_search_white_24dp"
        android:title="@string/search"
        app:showAsAction="always"
        app:actionViewClass="android.widget.SearchView" />

    <item
        android:id="@+id/app_bar_more"
        android:title="@string/more"
        app:showAsAction="never" />

    <item
        android:id="@+id/app_bar_about"
        android:title="@string/about"
        app:showAsAction="never" />
</menu>