<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/bottom_bar_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_favorite_white_24dp"
        android:title="@string/favorite"
        />

    <item
        android:id="@+id/bottom_bar_products"
        android:enabled="true"
        android:icon="@drawable/ic_shopping_cart_white_24dp"
        android:title="@string/products"
        />

    <item
        android:id="@+id/bottom_bar_offerts"
        android:enabled="true"
        android:icon="@drawable/ic_attach_money_white_24dp"
        android:title="@string/offers"
        />

    <item
        android:id="@+id/bottom_bar_stores"
        android:enabled="true"
        android:icon="@drawable/ic_place_white_24dp"
        android:title="@string/stores"
        />

</menu>